fixing alignment issues for header

--- a/reactcalendar/src/Components/Stylings/Calendar.css
+++ b/reactcalendar/src/Components/Stylings/Calendar.css
@@ -12,12 +12,12 @@
 .calendarHeader {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .calendarHeader h1 {
-    padding-left: 32px;
-    padding-right: 32px;
-    /* margin-right: 300px; */
+    padding-left: 24px;
+    padding-right: 24px;
 }
 
 .toggleArrows {
